// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ViewDocButton should render a view button poiting to the doc url with the searchTerm if pressent 1`] = `
<Connect(I18NLink)
  className="btn btn-default btn-xs"
  onClick={[Function]}
  to="/entity/123"
>
  <Connect(Icon)
    directionAware={true}
    icon="angle-right"
  />
   
  View
</Connect(I18NLink)>
`;

exports[`ViewDocButton should render a view button poiting to the doc url with the searchTerm if pressent 2`] = `
<Connect(I18NLink)
  className="btn btn-default btn-xs"
  onClick={[Function]}
  to="/entity/123?searchTerm=something"
>
  <Connect(Icon)
    directionAware={true}
    icon="angle-right"
  />
   
  View
</Connect(I18NLink)>
`;

exports[`ViewDocButton when targetReference is provided should render view button with references id, start and end in the url query 1`] = `
<Connect(I18NLink)
  className="btn btn-default btn-xs"
  onClick={[Function]}
  to="/entity/123?ref=ref1&refStart=200&refEnd=300"
>
  <Connect(Icon)
    directionAware={true}
    icon="angle-right"
  />
   
  View
</Connect(I18NLink)>
`;

exports[`ViewDocButton when targetReference is provided should render view button with references id, start and end in the url query 2`] = `
<Connect(I18NLink)
  className="btn btn-default btn-xs"
  onClick={[Function]}
  to="/entity/123?searchTerm=something&ref=ref1&refStart=200&refEnd=300"
>
  <Connect(Icon)
    directionAware={true}
    icon="angle-right"
  />
   
  View
</Connect(I18NLink)>
`;
